--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-email/components": "^0.0.17",
+    "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.17.3",
     "@uploadthing/react": "^6.5.1",
