--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.4",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/paypal-js": "^8.2.0",
+    "@paypal/react-paypal-js": "^8.8.3",
     "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -27,6 +30,9 @@
     "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.17.3",
+    "@tiptap/extension-placeholder": "^3.1.0",
+    "@tiptap/react": "^3.1.0",
+    "@tiptap/starter-kit": "^3.1.0",
     "@uploadthing/react": "^6.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -56,6 +62,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
