--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/starter-kit": "^3.1.0",
     "@uploadthing/react": "^6.5.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.1.7",
